# openai_api_tester

./: .gitignore  client.py  client_westus.py  pyproject.toml
